--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
             <p>Copyrights 2017 | All rights reserved Coders Lab</p>
         </div>
     </footer>
+    <script src="js/app.js" type="text/javascript"></script>
 </body>
 
 </html>
